SERVER-35925 Ensure that maxChunkSize is initialized in splitVector